# NeuroLMS

./: .gitignore  COPYRIGHT  README.md
.github/workflows/: checks.yml
app/: .env  Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.ts
app/src/app/: globals.css
app/src/app/dashboard/: layout.tsx  page.tsx
app/src/app/register/: page.tsx
app/src/components/: app-sidebar.tsx  register-form.tsx
app/src/components/course-list/: CourseCard.tsx
app/src/core/: api.tsx
app/src/core/auth/: AuthContext.tsx  AuthGuard.tsx  Loading.tsx  useAuth.tsx
app/src/core/types/: user_type.ts
app/src/core/types/forms/: register_form.ts
system/: .env  Cargo.toml  Dockerfile
system/src/: main.rs
system/src/api/: users.rs
system/src/api/users/: mod.rs  my_account_data.rs  register_user.rs  user_count.rs
system/src/db/: connector.rs  mod.rs  user_actions.rs
system/src/db/models/: user.rs
