[package]
name = "ScholaraLMS_System"
version = "0.0.1"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.5.2", features = ["cors"] }
tracing = "0.1.41"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bson = "2.0"  # Required for BSON serialization
dotenv = "0.15.0"
anyhow = "1.0.86"
sha2 = "0.10.8"
axum-extra = {version = "0.9.3", features = ["typed-header"]}
lettre = "0.11.10"
rand = "0.8.5"
log = "0.4.22"
tracing-subscriber = "0.3.18"
jsonwebtoken = "9.3.0"


[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["sync"]